--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwJoeQYA1t5mhZ9grPFRxi",
+      "mount_file_id": "1XQ-ljSHTlAAtx29Ez4sH9YDY7GPBA5_8",
+      "authorship_tag": "ABX9TyPhAtEqU3ij7Pq42Kr3QKQO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +28,334 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# Get the text file\n"
+      ],
       "metadata": {
-        "id": "DNpIUUia80ng"
+        "id": "UfbYLIa7fGvs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "DNpIUUia80ng",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "002db34f-2739-4025-8921-a6b3573740d6"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('verdict.txt', <http.client.HTTPMessage at 0x7e4a2d142fc0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ],
+      "source": [
+        "import urllib\n",
+        "url =  (\"https://raw.githubusercontent.com/rasbt/\"\n",
+        "       \"LLMs-from-scratch/main/ch02/01_main-chapter-code/\"\n",
+        "       \"the-verdict.txt\")\n",
+        "file_path = \"verdict.txt\"\n",
+        "urllib.request.urlretrieve(url , file_path)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Read the text file"
+      ],
+      "metadata": {
+        "id": "dRKTFMdVfOYn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"verdict.txt\" , \"r\" , encoding=\"utf-8\") as f:\n",
+        "  raw_text = f.read()\n",
+        "\n",
+        "print(\"Total characters:\" , len(raw_text))\n",
+        "print(raw_text[:50])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-ZYVMd0b_i5q",
+        "outputId": "d0568367-bc89-4cdc-ce8d-8e57cd2cdf9f"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total characters: 20479\n",
+            "I HAD always thought Jack Gisburn rather a cheap g\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Pre-process the text file"
+      ],
+      "metadata": {
+        "id": "gObsfRolfV3k"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "pre_process = re.split(r'([,.:;?!\"()_\\']|--|\\s)', raw_text)\n",
+        "pre_processed = [item.strip() for item in pre_process if item.strip()]\n",
+        "print(len(pre_processed))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XJkLOB9DCXvk",
+        "outputId": "e6824253-2dc5-46a8-bade-7756b85128a0"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4690\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Sample pre-processed data"
+      ],
+      "metadata": {
+        "id": "HTB9N1s0fYvs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(pre_processed[:30])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b1Xql5GAU9yC",
+        "outputId": "38fde93f-1758-4ef8-b013-2d66d89e9903"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['I', 'HAD', 'always', 'thought', 'Jack', 'Gisburn', 'rather', 'a', 'cheap', 'genius', '--', 'though', 'a', 'good', 'fellow', 'enough', '--', 'so', 'it', 'was', 'no', 'great', 'surprise', 'to', 'me', 'to', 'hear', 'that', ',', 'in']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Create a vocabulary"
+      ],
+      "metadata": {
+        "id": "nh2l5GO8fdSq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "words = sorted(set(pre_processed))\n",
+        "vocab_size = len(words)\n",
+        "print(vocab_size)"
+      ],
+      "metadata": {
+        "id": "VYHUFQFrawH1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c391a84c-e2df-433f-bf90-5170351e5798"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1130\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vocab = {token : integer for integer , token in enumerate(words)}\n",
+        "for i , item in enumerate(vocab.items()):\n",
+        "  print(item)\n",
+        "  if i >= 30:\n",
+        "    break\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mXmStOeJfmv2",
+        "outputId": "558e6c2a-488d-46ff-cddc-53fbd33538e8"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('!', 0)\n",
+            "('\"', 1)\n",
+            "(\"'\", 2)\n",
+            "('(', 3)\n",
+            "(')', 4)\n",
+            "(',', 5)\n",
+            "('--', 6)\n",
+            "('.', 7)\n",
+            "(':', 8)\n",
+            "(';', 9)\n",
+            "('?', 10)\n",
+            "('A', 11)\n",
+            "('Ah', 12)\n",
+            "('Among', 13)\n",
+            "('And', 14)\n",
+            "('Are', 15)\n",
+            "('Arrt', 16)\n",
+            "('As', 17)\n",
+            "('At', 18)\n",
+            "('Be', 19)\n",
+            "('Begin', 20)\n",
+            "('Burlington', 21)\n",
+            "('But', 22)\n",
+            "('By', 23)\n",
+            "('Carlo', 24)\n",
+            "('Chicago', 25)\n",
+            "('Claude', 26)\n",
+            "('Come', 27)\n",
+            "('Croft', 28)\n",
+            "('Destroyed', 29)\n",
+            "('Devonshire', 30)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Text Tokenizer"
+      ],
+      "metadata": {
+        "id": "MoQb-YlsN1mB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class TokenizerV1:\n",
+        "  def __init__(self , vocab):\n",
+        "    self.str_to_int = vocab\n",
+        "    self.int_to_str = {integer : string for string , integer in vocab.items() }\n",
+        "\n",
+        "  def encode(self, text):\n",
+        "    preprocess = re.split(r'([,.()?_\"!\\']|--|\\s)' , text)\n",
+        "    preprocessed = [ item.strip() for item in preprocess if item.strip()]\n",
+        "    ids = [ self.str_to_int[s] for s in preprocessed]\n",
+        "    return ids\n",
+        "\n",
+        "  def decode(self , ids):\n",
+        "    text = \" \".join([self.int_to_str[i] for i in ids])\n",
+        "\n",
+        "    text = re.sub(r'\\s+([,.()?!\\'])' , r'\\1' , text)\n",
+        "    return text"
+      ],
+      "metadata": {
+        "id": "7gKyMluEiqgr"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer = TokenizerV1(vocab)\n",
+        "text = \"\"\"\"It's the last he painted, you know,\"\n",
+        "       Mrs. Gisburn said with pardonable pride.\"\"\"\n",
+        "ids = tokenizer.encode(text)\n",
+        "print(ids)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AaNczLB2S36a",
+        "outputId": "150defde-dae8-4eb6-e94d-4fc9afa13c07"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 56, 2, 850, 988, 602, 533, 746, 5, 1126, 596, 5, 1, 67, 7, 38, 851, 1108, 754, 793, 7]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(tokenizer.decode(ids))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vbR3wqI8ThKr",
+        "outputId": "674f6787-5305-49f2-c302-8e7b1eafb747"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\" It' s the last he painted, you know, \" Mrs. Gisburn said with pardonable pride.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ZEv_lewOTq-h"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
